--- a/styles.css
+++ b/styles.css
@@ -202,30 +202,33 @@ body {
     justify-content: space-between;
     padding: 350px 40px; /* Adjust padding as needed */
     height: 70vh; /* Quarter-height of the viewport */
-    overflow: hidden;
-   
-    animation: fadeBackground 9s infinite; background: url("images/imgFour.jpg") center/cover no-repeat; /* Default background image */
+    overflow: hidden;   
     box-sizing: border-box; /* Rotating background animation */
     position: relative; /* To position content inside properly */
+}
+
+.hero-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    opacity: 0;                  /* Invisible by default */
+    transition: opacity 3s ease; /* Fade transition */
+}
+
+/* The one currently in view */
+.hero-bg.visible {
+    opacity: 1;
+    z-index: 1;
 }
 
 /* Preload images using pseudo-elements to prevent glitch */
 .hero-section::before {
     content: "";
     display: none;
-}
-
-/* Fade animation between images */
-@keyframes fadeBackground {
-    0% {
-        background-image: url("images/imgFour.jpg");
-    }
-    50%, 75% {
-        background-image: url("images/img2.jpg");
-    }
-    100% {
-        background-image: url("images/imgFour.jpg");
-    }
 }
 
 .hero-content {
